--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -1,36 +1,45 @@
+/* Global Styles */
+
 body {
   background-color: hsl(212, 45%, 89%);
-  padding: 0;
   margin: 0;
-}
-
-main {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 1440px;
+  padding: 0;
   min-height: 100vh;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  width: 100%;
+}
+
+/* Card Styles */
+
 .card {
   background-color: white;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 250px;
+  max-width: 250px;
   height: fit-content;
-  border-radius: 10px;
-  padding: 20px;
+  padding: 24px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+/* Image Styles */
 
 img {
   width: 100%;
   height: auto;
   border-radius: 10px;
 }
+
+/* Title and Description Styles */
+
 .title {
   font-size: 20px;
   color: hsl(218, 44%, 22%);
